# Fusion-Boa-Code

./: .commit_msg.txt  .commit_msg2.txt  .gitignore  CHANGELOG.md  COMPLETE_SYNTAX.md  Dockerfile  LICENSE  Makefile  README.md  all_in_one.css  all_in_one.html  all_in_one.ini  all_in_one.js  all_in_one.json  all_in_one.md  all_in_one.toml  all_in_one.xml  all_in_one.yaml  complete_test.fusboa  fusion  fusionboa  fusionboa.bat  fusionboa.py  install.bat  install.py  install.sh  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
fusionboa_lang/: __init__.py  __main__.py
fusionboa_lang/codegen/: cpp_gen.py  csharp_gen.py  css_gen.py  data_parser.py  go_gen.py  helpers.py  html_gen.py  ini_gen.py  java_gen.py  javascript_gen.py  json_gen.py  julia_gen.py  kotlin_gen.py  lua_gen.py  markdown_gen.py  python_gen.py  r_gen.py  react_gen.py  ruby_gen.py  rust_gen.py  swift_gen.py  target_router.py  test_codegens.py  toml_gen.py  typescript_gen.py  xml_gen.py  yaml_gen.py
fusionboa_lang/errors/: __init__.py  error_handler.py  source_map.py
fusionboa_lang/examples/: all_in_one.apx  all_in_one.fusboa  app.fusboa  demo.apx  demo.fusboa  hello.fusboa  mega.fusboa  polyglot_demo.fusboa
fusionboa_lang/lexer/: lexer.py  tokens.py
fusionboa_lang/parser/: ast_nodes.py  parser.py
fusionboa_lang/runtime/: executor.py
fusionboa_lang/semantic/: __init__.py  type_checker.py
fusionboa_lang/stdlib/: __init__.py  io.py  net.py  system.py
site/: fusionboa-site.fusboa  netlify.toml
site-deploy/: app.js  index.html  style.css
tests/: complete_test_runner.py  test_integration.py  test_runner.py  test_type_checker.py  wsl2_test.sh
