[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionboa-lang"
version = "0.9.0"
description = "FusionBoa v0.9.0 — The polyglot programming language with 725 English-like keywords. Write once, compile to 23 targets. 74+ language features including multiple dispatch, generators, UFCS, macros, operator overloading, concurrency channels, memory management, and meta-factories."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # FusionBoa has zero external Python dependencies.
    # All imports use only the Python standard library.
    # This list is maintained here for future extensibility.
]
license = {text = "Proprietary — All Rights Reserved"}
authors = [
    {name = "FusionBoa Team"}
]
keywords = ["compiler", "codegen", "polyglot", "programming-language", "transpiler", "english-like", "multi-target", "natural-language", "metaprogramming", "concurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
fusionboa = "fusionboa:main"

[tool.setuptools]
packages = ["fusionboa_lang", "fusionboa_lang.lexer", "fusionboa_lang.parser", "fusionboa_lang.codegen", "fusionboa_lang.runtime"]

[tool.setuptools.package-data]
fusionboa_lang = ["examples/*.fusboa"]
